--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11.0"
-  }
+  },
+  "authors": [
+    {
+      "name": "skylabtech"
+    }
+  ]
 }
