STD-1 enable ffi extension

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - uses: php-actions/composer@v6
-      - uses: php-actions/phpunit@v3
-
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.3"
           tools: none
+          extensions: ffi
+
+      - uses: php-actions/composer@v6
+      - uses: php-actions/phpunit@v3
 
       - name: Update system
         run: sudo apt-get update
