--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,10 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.3"
-          tools: none
           extensions: ffi
+
+      - name: Install libvips
+        run: sudo apt install libvips-dev --no-install-recommends
 
       - uses: php-actions/composer@v6
       - uses: php-actions/phpunit@v3
