--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.3"
-          extensions: ffi
+          extensions: ext-ffi
 
       - uses: php-actions/composer@v6
       - uses: php-actions/phpunit@v3
