--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,11 @@ jobs:
       - name: Install libvips
         run: sudo apt install libvips-dev --no-install-recommends
 
-      - name: Setup PHP
+      - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.3"
+          extensions: ffi
 
       - name: Run php ini
         run: php --ini
