--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,11 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.3"
-          # extensions: ffi
+          php-version: 8.3
+          ini-values: zend.max_allowed_stack_size=-1
+          tools: composer:v2
+          coverage: none
+          ini-file: production
 
       - name: Install PHP FFI extension
         run: pecl install ffi
