--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,4 @@ jobs:
         run: composer install
 
       - name: Run phpunit
-        run: phpunit tests
+        run: vendor/bin/phpunit tests
