--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: true
     env:
-      PY_SDK_STAGING_KEY: ${{ secrets.PHP_SDK_STAGING_KEY }}
+      PHP_SDK_STAGING_KEY: ${{ secrets.PHP_SDK_STAGING_KEY }}
       SKYLAB_API_URL: ${{ secrets.SKYLAB_API_URL }}
 
     steps:
