--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
   "name": "skylab/studio",
+  "authors": [
+    {
+      "name": "SkylabTech",
+      "email": "info@skylabtech.ai",
+      "homepage": "https://skylabtech.ai",
+      "role": "Developer"
+    }
+  ],
   "version": "0.0.1",
-  "author": "SkylabTech <info@skylabtech.ai>",
   "description": "studio.skylabtech.ai PHP client",
   "require": {
     "guzzlehttp/guzzle": "^7.0",
@@ -9,10 +16,5 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11.0"
-  },
-  "authors": [
-    {
-      "name": "skylabtech"
-    }
-  ]
+  }
 }
