--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
     "guzzlehttp/guzzle": "^7.0",
     "jcupitt/vips": "2.3.0"
   },
+  "autoload": {
+    "psr-4": {
+      "Skylab\\Studio\\": "src/"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "^11.0"
   }
